--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:200,300,400');
 
 body {
-  background: #ffffff;
+  background: ##33475b;
   font-family: 'Muli', sans-serif;
   font-style: normal;
   font-weight: 300;
